added endpoints in artist
